# web-console/src/lib/services/manager/models/CreateOrReplaceProgramRequest.ts
@@ -16,4 +16,5 @@ export type CreateOrReplaceProgramRequest = {
    * Program description.
    */
   description: string
+  rust_code?: string
 }
